log_stash/m31-Individual-plots-on-RM-vs-rad-proj-10605464-error.log
  File "M31_signal_vs_entire_sky.py", line 241
    else:
       ^
IndentationError: expected an indented block
